Move sequential composition in method